Fix Facebook share box overflow

--- a/src/css/_basic.scss
+++ b/src/css/_basic.scss
@@ -53,7 +53,7 @@ html {
   -moz-osx-font-smoothing: grayscale;
 }
 
-iframe {
+.entry iframe {
   display: block;
   margin: 0 auto;
   max-width: 100%;
